# jpl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: header.hpp
include/jpl/: cstddef.hpp  memory.hpp  type_list.hpp  type_traits.hpp  utility.hpp
source/: source.cpp
test/: CMakeLists.txt  default_test.cpp
